# librelyrics-kkbox

./: .gitignore  LICENSE  README.md  __init__.py  api.py  module.py  pyproject.toml
.github/workflows/: release_to_pypi.yml
