[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librelyrics-kkbox"
version = "1.0.0"
description = "KKBOX lyrics provider plugin for LibreLyrics"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "libre-lyrics", email = "libre-lyrics@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["lyrics", "kkbox", "lrc", "synced-lyrics", "librelyrics", "plugin"]
requires-python = ">=3.10"

dependencies = [
    "librelyrics>=1.0.0",
    "requests>=2.28.0",
    "pycryptodomex>=3.15.0",
]

[project.urls]
Homepage = "https://github.com/libre-lyrics/librelyrics-kkbox"
Repository = "https://github.com/libre-lyrics/librelyrics-kkbox"
Issues = "https://github.com/libre-lyrics/librelyrics-kkbox/issues"

[project.entry-points."librelyrics.plugins"]
kkbox = "kkbox:KkboxModule"

[tool.setuptools]
packages = ["kkbox"]
package-dir = {"kkbox" = "."}
